修复班级成员问题以及修改班级任务相关的接口
