# pkg/app/api-server/server/server_clazz.go
@@ -58,7 +58,6 @@ func (s *Server) RegisterClazz(g *gin.RouterGroup) {
 		clazzGroup.POST("/:clazzId/tasks/:taskId/relations", s.AddTaskRelationIds)
 		clazzGroup.DELETE("/:clazzId/tasks/:taskId/relations", s.RemoveTaskRelationIds)
 		clazzGroup.GET("/:clazzId/tasks/:taskId/completion", s.PageQueryTaskCompletion)
-		clazzGroup.POST("/:clazzId/tasks/:taskId/copy", s.CopyTaskToClass)
 
 		// 学生班级关系
 		clazzGroup.POST("/:clazzId/student/:studentId", s.AddStudentToClass)
@@ -880,42 +879,6 @@ func (s *Server) GetClassStudents(c *gin.Context) {
 	}
 
 	utils.SuccessResponse(c, students)
-}
-
-// CopyTaskToClass godoc
-// @Summary      复制任务到班级
-// @Description  将一个班级的任务复制到另一个班级
-// @Tags         班级
-// @Accept       json
-// @Produce      json
-// @Param        clazzId path string true "班级ID"
-// @Param        taskId path string true "任务ID"
-// @Param        request body models.CopyTaskToClassRequest true "复制任务请求"
-// @Success      200 {object} utils.Response "复制成功"
-// @Failure      400 {object} models.ErrorResponse "请求参数错误"
-// @Security     BearerAuth
-// @Router       /clazzes/{clazzId}/tasks/{taskId}/copy [post]
-func (s *Server) CopyTaskToClass(c *gin.Context) {
-	clazzId := c.Param("clazzId")
-	taskId := c.Param("taskId")
-	if clazzId == "" || taskId == "" {
-		utils.BadRequestResponse(c, "班级ID或任务ID不能为空")
-		return
-	}
-
-	var req models.CopyTaskToClassRequest
-	if err := c.ShouldBindJSON(&req); err != nil {
-		utils.BadRequestResponse(c, err.Error())
-		return
-	}
-
-	userID, _ := c.Get("user_id")
-	if err := s.svc.ClazzService.CopyTaskToClass(c.Request.Context(), userID.(string), taskId, req); err != nil {
-		utils.BadRequestResponse(c, err.Error())
-		return
-	}
-
-	utils.SuccessResponse(c, nil)
 }
 
 // PageQueryTaskCompletion godoc
